Написал аннотации к методам; GET, POST, PATCH, DELETE
